Simply adjusting the account balance by the share value does not work in case of stock splits. So the balance will always be recalculated for stock accounts.

BUG: 240914

svn path=/trunk/extragear/office/kmymoney/; revision=1140640