kmymoney/mymoney/storage/mymoneyseqaccessmgr.h
@@ -1061,6 +1061,12 @@ private:
   void invalidateBalanceCache(const QString& id);
 
   /**
+    * Adjust the balance for account @a acc by the amount of shares in split @a split.
+    * The amount is added if @a reverse is @c false, subtracted in case it is @c true.
+    */
+  void adjustBalance(MyMoneyAccount& acc, const MyMoneySplit& split, bool reverse = false);
+  
+  /**
     * This member variable keeps the User information.
     * @see setUser()
     */
